--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.1",
-    "react-router-dom": "^7.0.2"
+    "react-hot-toast": "^2.4.1",
+    "react-router-dom": "^7.0.2",
+    "sweetalert2": "^11.15.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
