--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@heroicons/react": "^2.2.0",
     "axios": "^1.7.9",
     "firebase": "^11.1.0",
+    "moment": "^2.30.1",
     "preline": "^2.6.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
